crates/lash/tests/ui/model_selection_requires_variant.stderr
error[E0308]: mismatched types
 --> tests/ui/model_selection_requires_variant.rs:2:49
  |
2 |     let _ = lash::StandardCore::builder().model("model-only");
  |                                           ----- ^^^^^^^^^^^^ expected `ModelSpec`, found `&str`
  |                                           |
  |                                           arguments to this method are incorrect
  |
note: method defined here
 --> src/core.rs
  |
  |             pub fn model(mut self, model: lash_core::ModelSpec) -> Self {
  |                    ^^^^^
...
  | forward_core_builder_methods!(StandardCoreBuilder);
  | -------------------------------------------------- in this macro invocation
  = note: this error originates in the macro `forward_core_builder_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `model_variant` found for struct `StandardCoreBuilder` in the current scope
 --> tests/ui/model_selection_requires_variant.rs:3:43
  |
3 |     let _ = lash::StandardCore::builder().model_variant("low");
  |                                           ^^^^^^^^^^^^^ method not found in `StandardCoreBuilder`

error[E0308]: mismatched types
 --> tests/ui/model_selection_requires_variant.rs:7:27
  |
7 |     let _ = builder.model("model-only");
  |                     ----- ^^^^^^^^^^^^ expected `ModelSpec`, found `&str`
  |                     |
  |                     arguments to this method are incorrect
  |
note: method defined here
 --> src/turn.rs
  |
  |     pub fn model(mut self, model: ModelSpec) -> Self {
  |            ^^^^^
